	* lib/math: Files now conform to coding standards.  Separated float,
	  double, and long double versions of code into separate files so that
	  they don't draw in so much un-necessary code when doing a dumb link.
	* binfmt/libelf:  The ELF loader is working correctly with C++ static
	  constructors and destructors and all.
	* Documentation/NuttXBinfmt.html:  Add documentionof the binary loader.
	* configs/sim/ostest:  Converted to use the mconfig configuration tool.
	* configs/sim/cxxtest:  New test that will be used to verify the uClibc++
	  port (eventually).
	* include/nuttx/fs/fs.h, lib/stdio/lib_libfread.c, lib_ferror.c,
	  lib_feof.c, and lib_clearerr.c:  Add support for ferror(), feof(),
	  and clearerror().  ferror() support is bogus at the moment (it
	  is equivalent to !feof()); the others should be good.
	* configs/stm32f4discovery/include/board.h:  Correct timer 2-7
	  base frequency (provided by Freddie Chopin).
	* include/nuttx/sched.h, sched/atexit.c, and sched/task_deletehook.c:
	  If both atexit() and on_exit() are enabled, then implement atexit()
	  as just a special caseof on_exit().  This assumes that the ABI can
	  handle receipt of more call parameters than the receiving function
	  expects.  That is usually the case if parameters are passed in
	  registers.
	* libxx/libxx_cxa_atexit():  Implements __cxa_atexit()
	* configs/stm32f4discovery/cxxtest:  New test that will be used to
	  verify the uClibc++ port (eventually).  The sim platform turned not
	  to be a good platform for testing uClibc++.  The sim example will not
	  run because the simulator will attempt to execute the static
	  constructors before main() starts. BUT... NuttX is not initialized
	  and this results in a crash.  On the STM324Discovery, I will have
	  better control over when the static constructors run.
	* RGMP 4.0 updated from Qiany Yu.
	* configs/*/Make.defs and configs/*/ld.script:  Massive clean-up
	  and standardization of linker scripts from Freddie Chopin.
