@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttShell (NSH)</i></font></big></h1>
-      <p>Last Updated: October 31, 2012</p>
+      <p>Last Updated: November 4, 2012</p>
     </td>
   </tr>
 </table>
@@ -173,175 +173,187 @@
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdifconfig">2.16 Show Network Configuration (ifconfig)</a>
+    <a href="#cmdifconfig">2.16 Manage Network Configuration (ifconfig)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdkill">2.17 Send a signal to a task (kill)</a>
+    <a href="#cmdifdown">2.17 Take a network down (ifdown)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdlosetup">2.18 Setup/teardown the Loop Device (losetup)</a>
+    <a href="#cmdifup">2.18 Bring a network up (ifup)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdls">2.19 List Directory Contents (ls)</a>
+    <a href="#cmdkill">2.19 Send a signal to a task (kill)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmd5">2.20 Calculate MD5 (md5)</a>
+    <a href="#cmdlosetup">2.20 Setup/teardown the Loop Device (losetup)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmbhw">2.21 Access Memory (mb, mh, and mw)</a>
+    <a href="#cmdls">2.21 List Directory Contents (ls)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdps">2.22 Show Current Tasks and Threads (ps)</a>
+    <a href="#cmdmd5">2.22 Calculate MD5 (md5)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkdir">2.23 Create a Directory (mkdir)</a>
+    <a href="#cmdmbhw">2.23 Access Memory (mb, mh, and mw)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkfatfs">2.24 Create a FAT Filesystem (mkfatfs)</a>
+    <a href="#cmdps">2.24 Show Current Tasks and Threads (ps)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkfifo">2.25 Create a FIFO (mkfifo)</a>
+    <a href="#cmdmkdir">2.25 Create a Directory (mkdir)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmkrd">2.26 Create a RAMDISK (mkrd)</a>
+    <a href="#cmdmkfatfs">2.26 Create a FAT Filesystem (mkfatfs)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmount">2.27 Mount a File System (mount)</a>
+    <a href="#cmdmkfifo">2.27 Create a FIFO (mkfifo)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdmv">2.28 Rename a File (mv)</a>
+    <a href="#cmdmkrd">2.28 Create a RAMDISK (mkrd)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdnfsmount">2.29 Mount an NFS file system (nfsmount)</a>
+    <a href="#cmdmount">2.29 Mount a File System (mount)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdping">2.30 Check Network Peer (ping)</a>
+    <a href="#cmdmv">2.30 Rename a File (mv)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdput">2.31 Send File Via TFTP (put)</a>
+    <a href="#cmdnfsmount">2.31 Mount an NFS file system (nfsmount)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdpwd">2.32 Show Current Working Directory (pwd)</a>
+    <a href="#cmdping">2.32 Check Network Peer (ping)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdrm">2.33 Remove a File (rm)</a>
+    <a href="#cmdput">2.33 Send File Via TFTP (put)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdrmdir">2.34 Remove a Directory (rmdir)</a>
+    <a href="#cmdpwd">2.34 Show Current Working Directory (pwd)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdset">2.35 Set an Environment Variable (set)</a>
+    <a href="#cmdrm">2.35 Remove a File (rm)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdsh">2.36 Execute an NSH Script (sh)</a>
+    <a href="#cmdrmdir">2.36 Remove a Directory (rmdir)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdsleep">2.37 Wait for Seconds (sleep)</a>
+    <a href="#cmdset">2.37 Set an Environment Variable (set)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdunmount">2.38 Unmount a File System (umount)</a>
+    <a href="#cmdsh">2.38 Execute an NSH Script (sh)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdunset">2.39 Unset an Environment Variable (unset)</a>
+    <a href="#cmdsleep">2.39 Wait for Seconds (sleep)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdurldec">2.40 URL Decode (urldecode)</a>
+    <a href="#cmdunmount">2.40 Unmount a File System (umount)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdurlencode">2.41 URL Encode (urlencode)</a>
+    <a href="#cmdunset">2.41 Unset an Environment Variable (unset)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdusleep">2.42 Wait for Microseconds (usleep)</a>
+    <a href="#cmdurldec">2.42 URL Decode (urldecode)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdwget">2.43 Get File Via HTTP (wget)</a>
+    <a href="#cmdurlencode">2.43 URL Encode (urlencode)</a>
   </td>
 </tr>
 <tr>
   <td><br></td>
   <td>
-    <a href="#cmdxd">2.44 Hexadecimal Dump (xd)</a>
+    <a href="#cmdusleep">2.44 Wait for Microseconds (usleep)</a>
+  </td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <a href="#cmdwget">2.45 Get File Via HTTP (wget)</a>
+  </td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <a href="#cmdxd">2.46 Hexadecimal Dump (xd)</a>
   </td>
 </tr>
 <tr>
@@ -1170,18 +1182,18 @@ help [-v] [&lt;cmd&gt;]
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdifconfig"><h2>2.16 Show Network Configuration (ifconfig)</h2></a>
+    <a name="cmdifconfig"><h2>2.16 Manage Network Configuration (ifconfig)</h2></a>
   </td>
   </tr>
 </table>
 
 <p><b>Command Syntax:</b></p>
 <ul><pre>
-ifconfig [nic_name [ip_address]]
+ifconfig [nic_name [ip]] [dr|gw|gateway &lt;dr-address&gt;] [netmask &lt;net-mask&gt;] [dns &lt;dns-address&gt;] [hw &lt;hw-mac&gt;]]
 </pre></ul>
 <p>
   <b>Synopsis</b>.
-  Two forms of the <code>ifconfig</code>command are supported:
+  Multiple forms of the <code>ifconfig</code>command are supported:
 </p>
 <ol>
   <li>
@@ -1214,14 +1226,63 @@ eth0    HWaddr 00:18:11:80:10:06
     </p>
     <ul><pre>
 ifconfig nic_name ip_address
-</pre><ul>
+</pre></ul>
+  </li>
+  <li>
+    Other forms <i>to be provided</i>
   </li>
 </ol>
 
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdkill"><h2>2.17 Send a signal to a task (kill)</h2></a>
+    <a name="cmdifdown"><h2>2.17 Take a network down (ifdown)</h2></a>
+  </td>
+  </tr>
+</table>
+
+<p><b>Command Syntax:</b></p>
+<ul><pre>
+ifdown &lt;nic-name&gt;
+</pre></ul>
+<p>
+  <b>Synopsis</b>.
+  Take down the interface identified by the name &lt;nic-name&gt;.
+</p>
+<p>
+  <b>Example:</b>
+</p>
+<ul><pre>
+ifdown eth0
+</pre></ul>
+
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="cmdifup"><h2>2.18 Bring a network up (ifup)</h2></a>
+  </td>
+  </tr>
+</table>
+
+<p><b>Command Syntax:</b></p>
+<ul><pre>
+ifup &lt;nic-name&gt;
+</pre></ul>
+<p>
+  <b>Synopsis</b>.
+  Bring up down the interface identified by the name &lt;nic-name&gt;.
+</p>
+<p>
+  <b>Example:</b>
+</p>
+<ul><pre>
+ifup eth0
+</pre></ul>
+
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="cmdkill"><h2>2.19 Send a signal to a task (kill)</h2></a>
   </td>
   </tr>
 </table>
@@ -1262,7 +1323,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdlosetup"><h2>2.18 Setup/teardown the Loop Device (losetup)</h2></a>
+    <a name="cmdlosetup"><h2>2.20 Setup/teardown the Loop Device (losetup)</h2></a>
   </td>
   </tr>
 </table>
@@ -1315,7 +1376,7 @@ losetup d &lt;dev-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdls"><h2>2.19 List Directory Contents (ls)</h2></a>
+    <a name="cmdls"><h2>2.21 List Directory Contents (ls)</h2></a>
   </td>
   </tr>
 </table>
@@ -1352,7 +1413,7 @@ ls [-lRs] &lt;dir-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmd5"><h2>2.20 Calculate MD5 (md5)</h2></a>
+    <a name="cmdmd5"><h2>2.22 Calculate MD5 (md5)</h2></a>
   </td>
   </tr>
 </table>
@@ -1369,7 +1430,7 @@ md5 [-f] &lt;string or filepath&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmbhw"><h2>2.21 Access Memory (mb, mh, and mw)</h2></a>
+    <a name="cmdmbhw"><h2>2.23 Access Memory (mb, mh, and mw)</h2></a>
   </td>
   </tr>
 </table>
@@ -1423,7 +1484,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdps"><h2>2.22 Show Current Tasks and Threads (ps)</h2></a>
+    <a name="cmdps"><h2>2.24 Show Current Tasks and Threads (ps)</h2></a>
   </td>
   </tr>
 </table>
@@ -1449,7 +1510,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkdir"><h2>2.23 Create a Directory (mkdir)</h2></a>
+    <a name="cmdmkdir"><h2>2.25 Create a Directory (mkdir)</h2></a>
   </td>
 </tr>
 </table>
@@ -1484,7 +1545,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkfatfs"><h2>2.24 Create a FAT Filesystem (mkfatfs)</h2></a>
+    <a name="cmdmkfatfs"><h2>2.26 Create a FAT Filesystem (mkfatfs)</h2></a>
   </td>
 </tr>
 </table>
@@ -1504,7 +1565,7 @@ mkfatfs &lt;path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkfifo"><h2>2.25 Create a FIFO (mkfifo)</h2></a>
+    <a name="cmdmkfifo"><h2>2.27 Create a FIFO (mkfifo)</h2></a>
   </td>
 </tr>
 </table>
@@ -1542,7 +1603,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmkrd"><h2>2.26 Create a RAMDISK (mkrd)</h2></a>
+    <a name="cmdmkrd"><h2>2.28 Create a RAMDISK (mkrd)</h2></a>
   </td>
 </tr>
 </table>
@@ -1593,7 +1654,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmount"><h2>2.27 Mount a File System (mount)</h2></a>
+    <a name="cmdmount"><h2>2.29 Mount a File System (mount)</h2></a>
   </td>
 </tr>
 </table>
@@ -1672,7 +1733,7 @@ nsh> mount
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdmv"><h2>2.28 Rename a File (mv)</h2></a>
+    <a name="cmdmv"><h2>2.30 Rename a File (mv)</h2></a>
   </td>
   </tr>
 </table>
@@ -1690,7 +1751,7 @@ mv &lt;old-path&gt; &lt;new-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdnfsmount"><h2>2.29 Mount an NFS file system (nfsmount)</h2></a>
+    <a name="cmdnfsmount"><h2>2.31 Mount an NFS file system (nfsmount)</h2></a>
   </td>
   </tr>
 </table>
@@ -1709,7 +1770,7 @@ nfsmount &lt;server-address&gt; &lt;mount-point&gt; &lt;remote-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdping"><h2>2.30 Check Network Peer (ping)</h2></a>
+    <a name="cmdping"><h2>2.32 Check Network Peer (ping)</h2></a>
   </td>
   </tr>
 </table>
@@ -1742,7 +1803,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdput"><h2>2.31 Send File Via TFTP (put)</h2></a>
+    <a name="cmdput"><h2>2.33 Send File Via TFTP (put)</h2></a>
   </td>
   </tr>
 </table>
@@ -1777,7 +1838,7 @@ put [-b|-n] [-f &lt;remote-path&gt;] -h &lt;ip-address&gt; &lt;local-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdpwd"><h2>2.32 Show Current Working Directory (pwd)</h2></a>
+    <a name="cmdpwd"><h2>2.34 Show Current Working Directory (pwd)</h2></a>
   </td>
   </tr>
 </table>
@@ -1807,7 +1868,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdrm"><h2>2.33 Remove a File (rm)</h2></a>
+    <a name="cmdrm"><h2>2.35 Remove a File (rm)</h2></a>
   </td>
 </tr>
 </table>
@@ -1841,7 +1902,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdrmdir"><h2>2.34 Remove a Directory (rmdir)</h2></a>
+    <a name="cmdrmdir"><h2>2.36 Remove a Directory (rmdir)</h2></a>
   </td>
 </tr>
 </table>
@@ -1876,7 +1937,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdset"><h2>2.35 Set an Environment Variable (set)</h2></a>
+    <a name="cmdset"><h2>2.37 Set an Environment Variable (set)</h2></a>
   </td>
   </tr>
 </table>
@@ -1902,7 +1963,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdsh"><h2>2.36 Execute an NSH Script (sh)</h2></a>
+    <a name="cmdsh"><h2>2.38 Execute an NSH Script (sh)</h2></a>
   </td>
   </tr>
 </table>
@@ -1920,7 +1981,7 @@ sh &lt;script-path&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdsleep"><h2>2.37 Wait for Seconds (sleep)</h2></a>
+    <a name="cmdsleep"><h2>2.39 Wait for Seconds (sleep)</h2></a>
   </td>
   </tr>
 </table>
@@ -1937,7 +1998,7 @@ sleep &lt;sec&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdunmount"><h2>2.38 Unmount a File System (umount)</h2></a>
+    <a name="cmdunmount"><h2>2.40 Unmount a File System (umount)</h2></a>
   </td>
 </tr>
 </table>
@@ -1967,7 +2028,7 @@ nsh>
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdunset"><h2>2.39 Unset an Environment Variable (unset)</h2></a>
+    <a name="cmdunset"><h2>2.41 Unset an Environment Variable (unset)</h2></a>
   </td>
   </tr>
 </table>
@@ -1993,7 +2054,7 @@ nsh&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdurldec"><h2>2.40 URL Decode (urldecode)</h2></a>
+    <a name="cmdurldec"><h2>2.42 URL Decode (urldecode)</h2></a>
   </td>
   </tr>
 </table>
@@ -2010,7 +2071,7 @@ urldecode [-f] &lt;string or filepath&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdurlencode"><h2>2.41 URL Encode (urlencode)</h2></a>
+    <a name="cmdurlencode"><h2>2.43 URL Encode (urlencode)</h2></a>
   </td>
   </tr>
 </table>
@@ -2027,7 +2088,7 @@ urlencode [-f] &lt;string or filepath&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdusleep"><h2>2.42 Wait for Microseconds (usleep)</h2></a>
+    <a name="cmdusleep"><h2>2.44 Wait for Microseconds (usleep)</h2></a>
   </td>
   </tr>
 </table>
@@ -2044,7 +2105,7 @@ usleep &lt;usec&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdwget">2.43 Get File Via HTTP (wget)</a>
+    <a name="cmdwget">2.45 Get File Via HTTP (wget)</a>
   </td>
   </tr>
 </table>
@@ -2071,7 +2132,7 @@ wget [-o &lt;local-path&gt;] &lt;url&gt;
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
-    <a name="cmdxd"><h2>2.44 Hexadecimal dump (xd)</h2></a>
+    <a name="cmdxd"><h2>2.46 Hexadecimal dump (xd)</h2></a>
   </td>
   </tr>
 </table>
@@ -2214,6 +2275,16 @@ nsh>
     <td><b><code>ifconfig</code></b></td>
     <td><code>CONFIG_NET</code></td>
     <td><code>CONFIG_NSH_DISABLE_IFCONFIG</code></td>
+  </tr>
+  <tr>
+    <td><b><code>ifdown</code></b></td>
+    <td><code>CONFIG_NET</code></td>
+    <td><code>CONFIG_NSH_DISABLE_IFUPDOWN</code></td>
+  </tr>
+  <tr>
+    <td><b><code>ifup</code></b></td>
+    <td><code>CONFIG_NET</code></td>
+    <td><code>CONFIG_NSH_DISABLE_IFUPDOWN</code></td>
   </tr>
   <tr>
     <td><b><code>kill</code></b></td>
@@ -3723,9 +3794,9 @@ mount -t vfat /dev/ram1 /tmp
   <li><a href="#startupscript"><code>/etc/init.d/rcS</code></a>
   <li><a href="#cmdexec"><code>exec</code></a></li>
   <li><a href="#custapps"><code>exec_namedapp()</code></a></li>
+  <li><a href="#cmdexit"><code>exit</code></a></li>
 </ul></td>
 <td></ul>
-  <li><a href="#cmdexit"><code>exit</code></a></li>
   <li><a href="#cmdfree"><code>free</code></a></li>
   <li><a href="#custoncmds"><code>g_cmdmap</code></a></li>
   <li><a href="#custinit"><code>genromfs</code></a></li>
@@ -3734,6 +3805,8 @@ mount -t vfat /dev/ram1 /tmp
   <li><a href="#cmdhelp"><code>help</code></a></li>
   <li><a href="#conditional"><code>if-then[-else]-fi</code></a></li>
   <li><a href="#cmdifconfig"><code>ifconfig</code></a></li>
+  <li><a href="#cmdifdown"><code>ifdown</code></a></li>
+  <li><a href="#cmdifup"><code>ifup</code></a></li>
   <li><a href="#custonshlib">Initialization sequence</a></li>
   <li><a href="#cmdkill"><code>kill</code></a></li>
   <li><a href="#cmdlosetup"><code>losetup</code></a></li>
